# new_viewer

./: .gitignore  GEMINI.md  README.md  db_mail.py  mail_content_overlay.ui  main.py  main.spec  pyproject.toml  replacements.txt  requirements.txt  thread.py  지원 테이블 상태.txt
auto_fill/: main.py  pdf_viewer.py
core/: data_manage.py  delete_utils.py  edit_mixin.py  etc_tools.py  insert_mixin.py  insert_utils.py  mail_utils.py  pdf_render.py  pdf_saved.py  region_data.json  sql_manager.py  ui_helpers.py  utility.py  widgets.py  workers.py
get_mail_logics/: batch_job.py  gemini_utils.py  pdf_annotation_guard.py  pdf_process.py  pdf_rotation.py  pdf_test.py  reply.py  reply_mail.py  requirements.txt  test.py  thread.py  upload_supabase.py
test/: address_check.py  hard_test.py  insert_stamp_test.py  mysql_구매계약서.py  mysql_초본.py  overlay_test.py  standalone_overlay_test.py  standalone_overlay_test.spec  standalone_subsidy_table_test.py  subsidy_amount_cleaned.xlsx  test.ipynb  test.py  test_excel.py
ui/: alarm_widget.ui  config_dialog.ui  crop_dialog.ui  ev_helper_dialog.ui  feedback_dialog.ui  file_dialog.ui  floating_toolbar.ui  folder_dialog.ui  form.ui  gemini_results_dialog.ui  give_memo_dialog.ui  help_dialog.ui  info_panel.ui  login_dialog.ui  mail_dialog.ui  main_window.ui  necessary_widget.ui  pdf_load_area.ui  pdf_view_widget.ui  region_manager.ui  settings.ui  special_note_dialog.ui  stamp_overlay.ui  thumbnail_viewer.ui  to_do_widget.ui  worker_progress.ui
widgets/: alarm_widget.py  alert_dialog.py  config_dialog.py  crop_dialog.py  custom_item.py  widgets.py  (+33 more)
(+2 files in other folders)
