[project]
name = "new-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyQt6>=6.6.0",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "pynput>=1.8.1",
    "pyinstaller>=6.16.0",
    "xlrd>=2.0.2",
    "pypdf>=6.4.1",
    "psycopg2>=2.9.11",
]
